# CompPhysUtils

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
examples/: cluster.cfg  na_pyramid_100.cfg
examples/coord_plot/: benzene.xyz
src/compphysutils/: __init__.py
src/compphysutils/crystalgen/: Vector.py  VectorReal.py  VectorRepresentation.py  gencluster  generator.py  readCrystalChar.py
src/compphysutils/graphics/: __init__.py  aimsParser.py  atom_plot.py  colsParser.py  combine.py  decorator.py  eigerParser.py  fitter.py  hlgParser.py  parser.py  plot3dcoords  plotconfig  plotcoords  plotter.py  post_process.py  transformer.py
src/compphysutils/graphics/decorate/: arrow.py  image.py  line.py  rect.py  text.py
src/compphysutils/graphics/fit_types/: inverse.py  linear.py  lorentz_peak.py  quadratic.py
src/compphysutils/graphics/plot_types/: colormap.py  coord.py  errorbar.py  fill_between.py  level.py  line.py  linlog.py  loglog.py  quiver.py  scatter.py
src/compphysutils/graphics/transforms/: log.py
src/compphysutils/parser/: __init__.py  combine.py  parsecoords  parser.py  post_process.py  post_processor.py  runcombine  runparser  savepoint.py
src/compphysutils/parser/combine_commands/: average.py  difference.py  integrate-field-axis.py  join-partial.py  join.py  map-to-fermi-window.py  roll-extract.py  scale.py  sum.py  thermal-average.py  tm-orbital-sum.py  translate.py  union-partial.py  union.py
src/compphysutils/parser/parsers/: aims.py  cols.py  coord-aims.py  coord-cub.py  coord-tm.py  coord-xyz.py  csv.py  (+4 more)
tests/: parser_cols.out  parser_cols.py  parser_cols.write  parser_csv.csv  parser_csv.py
(+7 files in other folders)
