[metadata]
name = compphysutils
version = 0.4.0
author = Stepan Marek
#author_email = izzet.stmr@gmail.com
description = Set of utilities for computational condensed matter physics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StepanMarek/CompPhysUtils
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
	Development Status :: 3 - Alpha

[options]
package-dir = 
	= src
include_package_data = True
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
gencluster = src/compphysutils/crystalgen/gencluster
plotconfig = src/compphysutils/graphics/plotconfig
